# ndi-serial-emulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.py  demo.mov  dummy.py  emulator.py  main.cpp  main.py  ndi_consumer.py  ndi_utils.hpp  test_2.0_loop.py
ROMs/: LCT576.rom  P1520.rom  ST1257.rom
src/: base_command.py  basecommand.py  commands.py  crc.py  errormanager.py  frame_manager.py  framemanager.py  main.py  port_handle_manager.py  porthandlemanager.py  poseloader.py  serialmanager.py
utils/: ndi_consumer.py
